--- a/predefined_run_configs.json
+++ b/predefined_run_configs.json
@@ -3,11 +3,11 @@
         "title": "settings",
         "type": "import",
         "config": {
-            "step": 25,
-            "start_frame": 0,
-            "end_frame": -1,
-            "skip_frames": [],
-            "dhash_min_hamming_distance": 0
+            "axis": 0,
+            "size": [256,256],
+            "mode": "sliding_window",
+            "overlap" : 10,
+            "n_sample" : 100
     }
   }
 ]
