--- a/predefined_run_configs.json
+++ b/predefined_run_configs.json
@@ -7,7 +7,8 @@
             "size": [256,256],
             "mode": "sliding_window",
             "overlap" : 10,
-            "n_sample" : 100
+            "n_sample" : 100,
+            "skip" : 2
     }
   }
 ]
